test/scc/expr/semantic-errors/141.a
141.t:6:9: error: initializer element is not constant